ontol/ontol-compiler/test-cases/error/rel/constant_weird_syntax.on
def foo (
    rel .'prop' := 42 // ERROR Incompatible literal// ERROR object must be a data type
)
